force-app/main/default/objects/Property_Valuation__c/fields/Reason_for_Buying_Selling__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Buying_Selling__c</fullName>
    <label>Reason for Buying / Selling</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>