force-app/main/default/objects/Property_Valuation__c/fields/Recent_Refused_Planning_Applications__c.field-meta.xml
<CustomField>
    <fullName>Recent_Refused_Planning_Applications__c</fullName>
    <inlineHelpText>Have any planning applications been refused within the past 12 months?</inlineHelpText>
    <label>Recent Refused Planning Applications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>