force-app/main/default/objects/Property_Valuation__c/fields/Recommended_Price__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Price__c</fullName>
    <label>Recommended Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>