force-app/main/default/objects/Property_Valuation__c/fields/Rent_Includes__c.field-meta.xml
<CustomField>
    <fullName>Rent_Includes__c</fullName>
    <inlineHelpText>Eg Council Tax, Utilities etc.</inlineHelpText>
    <label>Rent Includes</label>
    <length>40</length>
    <type>Text</type>
</CustomField>