force-app/main/default/objects/Property_Valuation__c/fields/Request_for_Signboard__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Signboard__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if For Sale Board is required.</inlineHelpText>
    <label>Request for Signboard</label>
    <type>Checkbox</type>
</CustomField>