force-app/main/default/objects/Property_Valuation__c/fields/Secondary_Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Property_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Property Owner / Landlord</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property Valuations (Secondary Property Owner)</relationshipLabel>
    <relationshipName>Property_Valuations</relationshipName>
    <type>Lookup</type>
</CustomField>