force-app/main/default/objects/Property_Valuation__c/fields/Select_Ara_Town__c.field-meta.xml
<CustomField>
    <fullName>Select_Ara_Town__c</fullName>
    <label>Select Area/Towns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Town_Dropdown</valueSetName>
    </valueSet>
</CustomField>