force-app/main/default/objects/Property_Valuation__c/fields/Select_Area_Town__c.field-meta.xml
<CustomField>
    <fullName>Select_Area_Town__c</fullName>
    <label>Select Area/Town</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ascot</fullName>
            </value>
            <value>
                <fullName>Battersea</fullName>
            </value>
            <value>
                <fullName>Bayswater</fullName>
            </value>
            <value>
                <fullName>Belgravia</fullName>
            </value>
            <value>
                <fullName>Campden Hill</fullName>
            </value>
            <value>
                <fullName>Chelsea</fullName>
            </value>
            <value>
                <fullName>Chelsea Creek</fullName>
            </value>
            <value>
                <fullName>Chiswick</fullName>
            </value>
            <value>
                <fullName>Chobham</fullName>
            </value>
            <value>
                <fullName>Cobham</fullName>
            </value>
            <value>
                <fullName>Cotswolds</fullName>
            </value>
            <value>
                <fullName>Covent Garden</fullName>
            </value>
            <value>
                <fullName>Cuffley</fullName>
            </value>
            <value>
                <fullName>Earls Court</fullName>
            </value>
            <value>
                <fullName>East Horsley</fullName>
            </value>
            <value>
                <fullName>Effingham</fullName>
            </value>
            <value>
                <fullName>Esher</fullName>
            </value>
            <value>
                <fullName>Farnham Common</fullName>
            </value>
            <value>
                <fullName>Fetcham</fullName>
            </value>
            <value>
                <fullName>Finchley</fullName>
            </value>
            <value>
                <fullName>Fitzvoria</fullName>
            </value>
            <value>
                <fullName>Fulham</fullName>
            </value>
            <value>
                <fullName>Guilford</fullName>
            </value>
            <value>
                <fullName>Hampstead</fullName>
            </value>
            <value>
                <fullName>Hampstead Garden Suburb</fullName>
            </value>
            <value>
                <fullName>Hampstead Heath</fullName>
            </value>
            <value>
                <fullName>Haywards Heath</fullName>
            </value>
            <value>
                <fullName>Hertfordshire</fullName>
            </value>
            <value>
                <fullName>Highgate</fullName>
            </value>
            <value>
                <fullName>Holland Park</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>