force-app/main/default/objects/Property_Valuation__c/fields/Seller_LeadSource__c.field-meta.xml
<CustomField>
    <fullName>Seller_LeadSource__c</fullName>
    <label>Seller LeadSource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Agency</fullName>
            </value>
            <value>
                <fullName>Active Pipe</fullName>
            </value>
            <value>
                <fullName>Agent Internal Referral</fullName>
            </value>
            <value>
                <fullName>Auction House</fullName>
            </value>
            <value>
                <fullName>B2B Personal Relationship</fullName>
            </value>
            <value>
                <fullName>Baccarat Developer</fullName>
            </value>
            <value>
                <fullName>Baccarat Residences Sales Centre</fullName>
            </value>
            <value>
                <fullName>Belgravia Resident&apos;s Journal</fullName>
            </value>
            <value>
                <fullName>Canal Front Residences -Sales Center</fullName>
            </value>
            <value>
                <fullName>Canal Front Residences - What&apos;s app Agency Group</fullName>
            </value>
            <value>
                <fullName>CCE - Did not probe</fullName>
            </value>
            <value>
                <fullName>Commversion</fullName>
            </value>
            <value>
                <fullName>DMCC Developer</fullName>
            </value>
            <value>
                <fullName>DMCC SO Uptown Sales Center</fullName>
            </value>
            <value>
                <fullName>Eden House Canal Developer</fullName>
            </value>
            <value>
                <fullName>Eden House Canal Sales Centre</fullName>
            </value>
            <value>
                <fullName>Eden Plots Developer</fullName>
            </value>
            <value>
                <fullName>External Agent Referral</fullName>
            </value>
            <value>
                <fullName>Facebook Ads</fullName>
            </value>
            <value>
                <fullName>Four Seasons Abu Dhabi Developer</fullName>
            </value>
            <value>
                <fullName>Four Seasons DIFC Sales Centre</fullName>
            </value>
            <value>
                <fullName>Four Seasons Retail</fullName>
            </value>
            <value>
                <fullName>FT Property Listings</fullName>
            </value>
            <value>
                <fullName>Greens Office - Walk in</fullName>
            </value>
            <value>
                <fullName>ICD Referral</fullName>
            </value>
            <value>
                <fullName>Inbound Referral</fullName>
            </value>
            <value>
                <fullName>Instagram Ads</fullName>
            </value>
            <value>
                <fullName>International referral</fullName>
            </value>
            <value>
                <fullName>James Edition</fullName>
            </value>
            <value>
                <fullName>Juwai.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>