force-app/main/default/objects/Property_Valuation__c/fields/Share_of_Freehold_Documents__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Freehold_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Share of freehold, please supply copies of supporting documents</inlineHelpText>
    <label>Share of Freehold Documents</label>
    <type>Checkbox</type>
</CustomField>