force-app/main/default/objects/Property_Valuation__c/fields/Short_Let_Price__c.field-meta.xml
<CustomField>
    <fullName>Short_Let_Price__c</fullName>
    <label>Short Let Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>