force-app/main/default/objects/Property_Valuation__c/fields/Short_Term_Lettings__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Lettings__c</fullName>
    <formula>If(INCLUDES(Letting_Service__c ,&quot;Short Term Lettings&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Term Lettings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>