force-app/main/default/objects/Property_Valuation__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <inlineHelpText>Add Area Of The Property</inlineHelpText>
    <label>Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>