force-app/main/default/objects/Property_Valuation__c/fields/Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Sort_Code__c</fullName>
    <label>Sort Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>