force-app/main/default/objects/Property_Valuation__c/fields/Street_2__c.field-meta.xml
<CustomField>
    <fullName>Street_2__c</fullName>
    <label>Street 2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>