force-app/main/default/objects/Property_Valuation__c/fields/SWIFT__c.field-meta.xml
<CustomField>
    <fullName>SWIFT__c</fullName>
    <label>SWIFT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>