force-app/main/default/objects/Property_Valuation__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <label>Telephone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>