force-app/main/default/objects/Property_Valuation__c/fields/Tenancy_Expires_on__c.field-meta.xml
<CustomField>
    <fullName>Tenancy_Expires_on__c</fullName>
    <label>Tenancy Expires on</label>
    <type>Date</type>
</CustomField>