force-app/main/default/objects/Property_Valuation__c/fields/Tenanted__c.field-meta.xml
<CustomField>
    <fullName>Tenanted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tenanted</label>
    <type>Checkbox</type>
</CustomField>