force-app/main/default/objects/Property_Valuation__c/fields/Test_EPC__c.field-meta.xml
<CustomField>
    <fullName>Test_EPC__c</fullName>
    <formula>EPC_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test EPC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>