force-app/main/default/objects/Property_Valuation__c/fields/TOB_Agent__c.field-meta.xml
<CustomField>
    <fullName>TOB_Agent__c</fullName>
    <formula>Owner:User.FirstName  &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
    <label>TOB Agent</label>
    <type>Text</type>
</CustomField>