force-app/main/default/objects/Property_Valuation__c/fields/TOB_Other_Conditions__c.field-meta.xml
<CustomField>
    <fullName>TOB_Other_Conditions__c</fullName>
    <label>Other Conditions</label>
    <length>250</length>
    <type>Text</type>
</CustomField>