force-app/main/default/objects/Property_Valuation__c/fields/TOB_PandaDoc_Name__c.field-meta.xml
<CustomField>
    <fullName>TOB_PandaDoc_Name__c</fullName>
    <formula>Address__c &amp; &quot; &quot; &amp;  &quot;-&quot; &amp; &quot; &quot; &amp; Contact__r.FirstName &amp;&quot; &quot;&amp; Contact__r.LastName</formula>
    <label>TOB PandaDoc Name</label>
    <type>Text</type>
</CustomField>