force-app/main/default/objects/Property_Valuation__c/fields/TOB_Registered_Company__c.field-meta.xml
<CustomField>
    <fullName>TOB_Registered_Company__c</fullName>
    <inlineHelpText>Add Company Name</inlineHelpText>
    <label>Registered Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>