force-app/main/default/objects/Property_Valuation__c/fields/Total_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Due__c</fullName>
    <label>Total Due (Old)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>