force-app/main/default/objects/Property_Valuation__c/fields/Total_Dues__c.field-meta.xml
<CustomField>
    <fullName>Total_Dues__c</fullName>
    <description>Total of AdvertisingFee, PhotographyFee, EPCFee, BrochuresFee</description>
    <formula>Advertising_Fee__c +  Photography_Fee__c + EPC_Fee__c + Brochures_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of AdvertisingFee, PhotographyFee, EPCFee, BrochuresFee</inlineHelpText>
    <label>Total Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>