force-app/main/default/objects/Property_Valuation__c/fields/Type_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Property__c</fullName>
    <inlineHelpText>Is the property? :- Freehold/Leasehold/Leasehold/Share of freehold</inlineHelpText>
    <label>Type of Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freehold</fullName>
            </value>
            <value>
                <fullName>Leasehold</fullName>
            </value>
            <value>
                <fullName>Leasehold/Share of freehold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>