force-app/main/default/objects/Property_Valuation__c/fields/Uk_Address__c.field-meta.xml
<CustomField>
    <fullName>Uk_Address__c</fullName>
    <label>Uk Address</label>
    <length>18</length>
    <type>Text</type>
</CustomField>