force-app/main/default/objects/Property_Valuation__c/fields/Upgrades__c.field-meta.xml
<CustomField>
    <fullName>Upgrades__c</fullName>
    <label>Upgrades</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Upgrades</valueSetName>
    </valueSet>
</CustomField>