force-app/main/default/objects/Property_Valuation__c/fields/Vacant_Management__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Management__c</fullName>
    <formula>If(INCLUDES(Letting_Service__c ,&quot;Vacant Management&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vacant Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>