force-app/main/default/objects/Property_Valuation__c/fields/Vendor_Estimate_Price__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Estimate_Price__c</fullName>
    <label>Vendor Estimate Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>