force-app/main/default/objects/Property_Valuation__c/fields/Verify_All_TOB_Fields__c.field-meta.xml
<CustomField>
    <fullName>Verify_All_TOB_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify All TOB Fields</label>
    <type>Checkbox</type>
</CustomField>