force-app/main/default/objects/Property_Valuation__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <label>View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>View</valueSetName>
    </valueSet>
</CustomField>