force-app/main/default/objects/Property_Valuation__c/fields/Who_Are_The_Managing_Agents__c.field-meta.xml
<CustomField>
    <fullName>Who_Are_The_Managing_Agents__c</fullName>
    <label>Who Are The Managing Agents?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>