force-app/main/default/objects/Property_Valuation__c/fields/Who_Owns_The_Freehold__c.field-meta.xml
<CustomField>
    <fullName>Who_Owns_The_Freehold__c</fullName>
    <label>Who Owns The Freehold?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>