force-app/main/default/objects/Property_Valuation__c/recordTypes/Rent.recordType-meta.xml
<RecordType>
    <fullName>Rent</fullName>
    <active>true</active>
    <label>Rent</label>
</RecordType>