force-app/main/default/objects/Property_Valuation__c/validationRules/Agent_Cannot_Change_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Agent_Cannot_Change_Status</fullName>
    <active>true</active>
    <description>When the status is attempting to change and set to &quot;Instructed,&quot; and the profile is &quot;UK Agent,&quot; then it is not allowed to be modified</description>
    <errorConditionFormula>AND(ISCHANGED(Status__c)&amp;&amp; ISPICKVAL((Status__c), &apos;Instructed&apos;),
$Profile.Name = &apos;UK Agent&apos;
)</errorConditionFormula>
    <errorMessage>Agents cannot be allowed to change the status to &apos;Instructed.</errorMessage>
</ValidationRule>