force-app/main/default/objects/Property_Valuation__c/validationRules/AreaTownNotNull.validationRule-meta.xml
<ValidationRule>
    <fullName>AreaTownNotNull</fullName>
    <active>false</active>
    <description>Deprecated.
Created for Property valuation vf page</description>
    <errorConditionFormula>AND( ISPICKVAL( Select_Ara_Town__c ,&apos;&apos;) ,
ISBLANK( Are_Town__c ))</errorConditionFormula>
    <errorMessage>Please select the Area/Town</errorMessage>
</ValidationRule>