force-app/main/default/objects/Property_Valuation__c/validationRules/Asking_Price_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Asking_Price_is_Mandatory</fullName>
    <active>true</active>
    <description>When the Agent is trying to set the status to &apos;Instructing,&apos; then listing price is required.</description>
    <errorConditionFormula>AND(
     ISPICKVAL(Status__c, &quot;Instructing&quot;),
 OR(
     ISBLANK( Listing_Price__c  )
     )
  )</errorConditionFormula>
    <errorDisplayField>Listing_Price__c</errorDisplayField>
    <errorMessage>Please fill in the asking price to update the status to &apos;instructing&apos;.</errorMessage>
</ValidationRule>