force-app/main/default/objects/Property_Valuation__c/validationRules/Commission_Not_Less_Than_Two_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Not_Less_Than_Two_Percent</fullName>
    <active>false</active>
    <description>Ensure that Commission is not less than 2%.</description>
    <errorConditionFormula>Commission__c &lt; 0.02</errorConditionFormula>
    <errorMessage>Commission must not be less than 2%</errorMessage>
</ValidationRule>