force-app/main/default/objects/Property_Valuation__c/validationRules/If_Status_is_Instructing.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Instructing</fullName>
    <active>true</active>
    <description>When the status is Set to &quot;Instructing,&quot; filling out the &quot;Primary Property Owner / Landlord&quot; and ensuring &quot;Land Registry Verified&quot; are mandatory.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Instructing&quot;),ISCHANGED(Status__c),  OR(ISBLANK(Contact__c), NOT(Land_Registry_Verified__c)))</errorConditionFormula>
    <errorMessage>When the Status is transferred to &quot;Instructing&quot; then the &quot;Primary Property Owner / Landlord&quot; and &quot;Land Registry Verified&quot; is mandatory to fill.</errorMessage>
</ValidationRule>