force-app/main/default/objects/Property_Valuation__c/validationRules/If_Status_is_Instructing_Balcony.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Instructing_Balcony</fullName>
    <active>true</active>
    <description>If status Instructing then add all dose details about the property</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c , &apos;Instructing&apos;) ,
  ISCHANGED(Status__c), 
 ISBLANK( Balcony__c )
)</errorConditionFormula>
    <errorDisplayField>Balcony__c</errorDisplayField>
    <errorMessage>Please fill in these fields for Instructing - Balcony</errorMessage>
</ValidationRule>