force-app/main/default/objects/Property_Valuation__c/validationRules/If_Status_is_Instructing_Bathrooms.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Instructing_Bathrooms</fullName>
    <active>true</active>
    <description>If status Instructing then add  details about the property</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c , &apos;Instructing&apos;) ,
 ISCHANGED(Status__c),
 ISBLANK( Bathrooms__c )
)</errorConditionFormula>
    <errorDisplayField>Bathrooms__c</errorDisplayField>
    <errorMessage>Please fill in these fields for Instructing - Bathroom.</errorMessage>
</ValidationRule>