force-app/main/default/objects/Property_Valuation__c/validationRules/If_Status_is_Instructing_Bedroom.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Instructing_Bedroom</fullName>
    <active>true</active>
    <description>If status Instructing then mandatory to add all dose details about property</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c , &apos;Instructing&apos;) ,
 ISCHANGED(Status__c),
 ISBLANK( Bedrooms__c )
)</errorConditionFormula>
    <errorDisplayField>Bedrooms__c</errorDisplayField>
    <errorMessage>Please fill in these fields for Instructing - Bedrooms</errorMessage>
</ValidationRule>