force-app/main/default/objects/Property_Valuation__c/validationRules/If_Status_is_Instructing_CreaDate_Greter.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Instructing_CreaDate_Greter</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISCHANGED(Status__c),
ISPICKVAL(Status__c, &quot;Instructing&quot;),
DATEVALUE(CreatedDate) &gt; DATE(2023, 12, 05),
ISBLANK(TEXT( Completion_Status__c ))   
)</errorConditionFormula>
    <errorDisplayField>Completion_Status__c</errorDisplayField>
    <errorMessage>Status is &quot;Instructing&quot;  - Completion Status is mandatory to fill</errorMessage>
</ValidationRule>