force-app/main/default/objects/Property_Valuation__c/validationRules/If_Status_is_Instructing_Floor.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Instructing_Floor</fullName>
    <active>true</active>
    <description>If the status is &apos;Instructing,&apos; then add all details about the Number Of Floor.</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c , &apos;Instructing&apos;) ,
ISBLANK( Floor__c ) 
)</errorConditionFormula>
    <errorDisplayField>Floor__c</errorDisplayField>
    <errorMessage>Please fill in these fields for Instructing - Number Of Floor</errorMessage>
</ValidationRule>