force-app/main/default/objects/Property_Valuation__c/validationRules/If_Status_is_Instructing_Size.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Instructing_Size</fullName>
    <active>true</active>
    <description>If the status is &apos;Instructing,&apos; then add all details about the Size.</description>
    <errorConditionFormula>AND(
 ISCHANGED(Status__c),
 ISPICKVAL( Status__c , &apos;Instructing&apos;) ,
 ISBLANK(  Size__c )
)</errorConditionFormula>
    <errorDisplayField>Size__c</errorDisplayField>
    <errorMessage>Please fill in these fields for Instructing - Size</errorMessage>
</ValidationRule>