force-app/main/default/objects/Property_Valuation__c/validationRules/Land_Registry_Verified_And_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Land_Registry_Verified_And_Type</fullName>
    <active>true</active>
    <description>When the Land Registry Verified is true, please update the Land Registry Type, Land Registry Primary Owner - Salutation, First Name, Last Name.</description>
    <errorConditionFormula>AND(
Land_Registry_Verified__c = True,
OR(ISPICKVAL( Land_Registry__c , &apos;&apos;),
ISPICKVAL(Land_Registry_Primary_Owner_Salutation__c, &apos;&apos;) ,
ISBLANK( Land_Registry_Primary_Owner_First_Name__c ),
ISBLANK( Land_Registry_Primary_Owner_Last_Name__c )))</errorConditionFormula>
    <errorMessage>Please fill in Land Registry Type, Land Registry Primary Owner - Salutation, First Name, Last Name</errorMessage>
</ValidationRule>