force-app/main/default/objects/Property_Valuation__c/validationRules/Land_registry_Verified_File_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Land_registry_Verified_File_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     Land_Registry_Verified__c = TRUE,
    OR(
        ISBLANK( Postcode__c ),
        ISBLANK( Apartment_House_Unit_Number__c )
    )
)</errorConditionFormula>
    <errorMessage>House Number &amp; postcode mandatory before marking as land registry verified</errorMessage>
</ValidationRule>