force-app/main/default/objects/Property_Valuation__c/validationRules/Land_Registry_Verified_Land_Registry_Typ.validationRule-meta.xml
<ValidationRule>
    <fullName>Land_Registry_Verified_Land_Registry_Typ</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Land_Registry_Verified__c = True,
ISPICKVAL( Land_Registry__c , &apos;Individual&apos;), 
OR(ISPICKVAL(Land_Registry_Primary_Owner_Salutation__c, &apos;&apos;) ,
ISBLANK( Land_Registry_Primary_Owner_First_Name__c ),
ISBLANK( Land_Registry_Primary_Owner_Last_Name__c )))</errorConditionFormula>
    <errorMessage>Please fill in Land Registry Primary Owner - Salutation , First Name, Last Name</errorMessage>
</ValidationRule>