force-app/main/default/objects/Property_Valuation__c/validationRules/LandRegistryVerifiedLandRegistryType2.validationRule-meta.xml
<ValidationRule>
    <fullName>LandRegistryVerifiedLandRegistryType2</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Land_Registry_Verified__c = True,
ISPICKVAL( Land_Registry__c , &apos;Company&apos;),
ISBLANK( TOB_Registered_Company__c ))</errorConditionFormula>
    <errorMessage>Please fill - Registered Company</errorMessage>
</ValidationRule>