force-app/main/default/objects/Property_Valuation__c/validationRules/Marketing_Exposure_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Marketing_Exposure_is_Mandatory</fullName>
    <active>true</active>
    <description>When the status changes and is set to &apos;Instructing,&apos; Marketing Exposure is required to be updated.</description>
    <errorConditionFormula>AND( 
    ISPICKVAL(Status__c, &apos;Instructing&apos;),
    ISCHANGED(Status__c),  
    (DateValue(CreatedDate)  &gt; Date(2023, 12, 06 )), 
    ISBLANK(Marketing_Exposure__c)
 )</errorConditionFormula>
    <errorDisplayField>Marketing_Exposure__c</errorDisplayField>
    <errorMessage>Mandatory to specify &quot;Marketing Exposure &quot; when the status is changed to &quot;Instructing.&quot;</errorMessage>
</ValidationRule>