force-app/main/default/objects/Property_Valuation__c/validationRules/Property_Sub_Type_should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Property_Sub_Type_should_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL(Property_Sub_Type__c, &apos;&apos;)  , ISPICKVAL( Status__c , &apos;Instructing&apos;))</errorConditionFormula>
    <errorDisplayField>Property_Sub_Type__c</errorDisplayField>
    <errorMessage>Please fill Property Sub type before marking the status as Instructing.</errorMessage>
</ValidationRule>