force-app/main/default/objects/Property_Valuation__c/validationRules/Reason_required_rule_if_Not_Instructed.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_required_rule_if_Not_Instructed</fullName>
    <active>true</active>
    <description>Add Reason for Not Instructed</description>
    <errorConditionFormula>AND(
   ISCHANGED(Status__c),
   ISPICKVAL( Status__c , &apos;Not Instructed&apos;) ,
   ISPICKVAL( Reason__c , &apos;&apos; ) 
)</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Please add Reason for Not Instructed.</errorMessage>
</ValidationRule>