force-app/main/default/objects/Property_Valuation__c/validationRules/Secondary_Contact_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Secondary_Contact_is_Required</fullName>
    <active>true</active>
    <description>If the &quot;Do you have Secondary Property Owner&quot; picklist field is set to &quot;Yes,&quot; then update the Secondary Property Owner field as needed.</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Do_you_have_Secondary_Property_Owner__c , &quot;Yes&quot;),
OR(
AND(
ISBLANK( CIF__c ),
 ISBLANK( Secondary_Property_Owner__c ) 
)
)
)</errorConditionFormula>
    <errorMessage>If the Secondary Owner is Yes then  Select Secondary Property Owner OR Add Additional CIF Contact through button.</errorMessage>
</ValidationRule>